# fabric-dbt-datavault

./: .gitignore  README.md  pyproject.toml
demoproject/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.SAMPLE
demoproject/models/business_vault/: control_snap_v0.sql  control_snap_v1.sql  dim_order.sql  pit_customer.sql  pit_order.sql
demoproject/models/raw_vault/: hub_customer.sql  hub_order.sql  hub_payment.sql  link_customer_order.sql  link_payment_order.sql  satv0_customer.sql  satv0_order.sql  satv0_payment.sql  satv1_customer.sql  satv1_order.sql  satv1_payment.sql
demoproject/models/sources/: sources.yml
demoproject/models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
demoproject/seeds/: raw_customers.csv  raw_orders.csv  raw_payments.csv
